Разметка главного меню

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,5 @@
 @import "_variable.scss";
-@import "_fonts.scss";
 @import "_global.scss";
+@import "_fonts.scss";
+
+@import "source/sass/blocks/index/main-menu.scss";
