Добавлена разметка слайдера

--- a/source/sass/_variable.scss
+++ b/source/sass/_variable.scss
@@ -23,3 +23,7 @@ $grey25: #cdcdcd;
 $grey0: #f0f0f4;
 
 $orangeB: #ff7931;
+
+$controlOpacityFullOVerlay: 0.64;
+$controlOpacityBg: 0.16;
+$controlOpacityControlOnBg: 0.4;
