--- a/source/sass/_global.scss
+++ b/source/sass/_global.scss
@@ -4,3 +4,44 @@
 
   @include fontBody;
 }
+
+a:hover,
+input:hover,
+button:hover {
+  cursor: pointer;
+}
+
+// ! Back-forward btn slider
+// ! Position added in specific files for each slider
+.back-forward-btn {
+  border: 0px;
+  height: 100%;
+  background: none;
+  width: 64px;
+
+  &:after {
+    content: "";
+    background-color: rgba($grey100, $controlOpacityBg);
+    background-image: url("/img/global/arrow-right.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 100px;
+
+    position: absolute;
+    left: 50%;
+    margin-left: -20px;
+
+    top: 50%;
+    margin-top: -20px;
+  }
+
+  &:hover {
+    background-color: rgba($grey100, $controlOpacityBg);
+  }
+
+  &:hover::after {
+    background-color: rgba($grey100, $controlOpacityControlOnBg);
+  }
+}
