--- a/source/sass/_global.scss
+++ b/source/sass/_global.scss
@@ -11,6 +11,11 @@ button:hover {
   cursor: pointer;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 // ! Back-forward btn slider
 // ! Position added in specific files for each slider
 .back-forward-btn {
