--- a/source/sass/_variable.scss
+++ b/source/sass/_variable.scss
@@ -16,6 +16,11 @@
   color: $grey100;
 }
 
+@mixin resetMarginPadding {
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+}
+
 $grey100: #323336;
 $grey75: #656464;
 $grey50: #a8a8a8;
