--- a/source/sass/blocks/index/hero-slider.scss
+++ b/source/sass/blocks/index/hero-slider.scss
@@ -9,7 +9,6 @@
   width: 1170px;
   display: flex;
   margin: auto;
-
   justify-content: space-between;
 }
 .slider {
@@ -18,7 +17,6 @@
   padding: 0px 0px 0px 0px;
   width: 870px;
   height: 397px;
-  justify-content: space-between;
   position: relative;
 
   &__list {
@@ -118,8 +116,181 @@
 }
 // ! Slider ended
 
-// ! Goods of the day
+// ! Goods of day
 .super-offer {
+  @include resetMarginPadding;
   width: 270px;
-  background-color: $grey25;
+  border: 1px solid $grey25;
+  position: relative;
+}
+
+.offer-comprasion {
+  @include resetMarginPadding;
+  position: absolute;
+  right: 16px;
+  top: 16px;
+  @include resetMarginPadding;
+  text-align: center;
+
+  &__new-price {
+    @include resetMarginPadding;
+    color: $orangeB;
+    font-weight: bold;
+    font-size: 24px;
+  }
+
+  &__old-price {
+    @include resetMarginPadding;
+    font-size: 16px;
+    font-weight: normal;
+    color: $grey75;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 34px;
+      left: 5px;
+      display: block;
+      background-color: $orangeB;
+      width: 50px;
+      height: 2px;
+      transform: rotate(-12deg);
+    }
+  }
+}
+
+.supper-offer-link {
+  @include textLinkReset;
+
+  &::before {
+    content: "Акция";
+    transform: rotate(-90deg);
+    position: absolute;
+    font-size: 12px;
+    font-weight: bold;
+    color: white;
+    text-transform: uppercase;
+    top: 22px;
+    left: -25px;
+    letter-spacing: 2px;
+    display: block;
+    width: auto;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 12px;
+    padding-right: 12px;
+    height: 24px;
+    background: linear-gradient(91.1deg, #9710e9 1.17%, #fd8d43 99.31%);
+  }
+}
+
+.offer-demonstration {
+  @include resetMarginPadding;
+
+  display: flex;
+  height: 300px;
+  flex-wrap: wrap;
+
+  justify-content: center;
+  align-items: flex-end;
+  padding: 16px;
+  box-sizing: border-box;
+
+  &__img {
+    @include resetMarginPadding;
+    width: 150px;
+  }
+
+  &__title {
+    @include resetMarginPadding;
+    text-align: center;
+    line-height: 18px;
+    font-weight: normal;
+    font-size: 14px;
+  }
+}
+
+.offer-action {
+  @include resetMarginPadding;
+  background-color: $grey0;
+  border-top: 1px solid $grey25;
+  padding-right: 16px;
+  padding-left: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  position: relative;
+
+  &__count-down-title {
+    @include resetMarginPadding;
+    width: 100%;
+    font-weight: bold;
+    padding-top: 12px;
+    padding-bottom: 8px;
+    text-align: center;
+  }
+
+  &__countdown {
+    @include resetMarginPadding;
+    border-collapse: collapse;
+    margin-bottom: 14px;
+
+    &::before {
+      content: "";
+      background-image: url("/img/iconsprite/icons.svg#_timer");
+      position: absolute;
+      bottom: 16px;
+      display: block;
+      width: 32px;
+      height: 32px;
+    }
+  }
+
+  &__countdown-tr {
+    @include resetMarginPadding;
+  }
+
+  &__mins-digits::before {
+    content: ":";
+    position: absolute;
+    bottom: 27px;
+    left: 126px;
+    color: $grey75;
+  }
+
+  &__mins-digits::after {
+    content: ":";
+    position: absolute;
+    bottom: 27px;
+    left: 176px;
+    color: $grey75;
+  }
+
+  &__hours-digits,
+  &__mins-digits,
+  &__seconds-digits {
+    @include resetMarginPadding;
+    font-size: 24px;
+    font-weight: bold;
+    padding-right: 24px;
+  }
+
+  &__hours-text,
+  &__mins-text,
+  &__seconds-text {
+    font-size: 11px;
+    line-height: 12px;
+    color: $grey75;
+    @include resetMarginPadding;
+  }
+
+  &__hours-digits,
+  &__hours-text {
+    padding-left: 48px;
+  }
+
+  &__seconds-digits,
+  &__seconds-text {
+    padding-right: 0px;
+  }
 }
