--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,3 +4,4 @@
 
 @import "source/sass/blocks/index/top-menu.scss";
 @import "source/sass/blocks/index/hero-slider.scss";
+@import "source/sass/blocks/index/search-form.scss";
