добавлен блок с ссылками на разделы

--- a/source/sass/_variable.scss
+++ b/source/sass/_variable.scss
@@ -25,9 +25,11 @@ $grey100: #323336;
 $grey75: #656464;
 $grey50: #a8a8a8;
 $grey25: #cdcdcd;
-$grey0: #f0f0f4;
-
+$grey0: #f1f1f1;
 $orangeB: #fd823f;
+$borderRadiusBlock: 8px;
+$borderRadiusElement: 4px;
+$gradientBrand: linear-gradient(91.1deg, #9710e9 1.17%, #fd8d43 99.31%);
 
 $controlOpacityFullOVerlay: 0.64;
 $controlOpacityBg: 0.16;
