--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,3 +5,4 @@
 @import "source/sass/blocks/index/top-menu.scss";
 @import "source/sass/blocks/index/hero-slider.scss";
 @import "source/sass/blocks/index/search-form.scss";
+@import "source/sass/blocks/index/department-links.scss";
