--- a/source/sass/blocks/index/search-form.scss
+++ b/source/sass/blocks/index/search-form.scss
@@ -1,5 +1,6 @@
 .main-search-container {
   margin-top: 80px;
+  margin-bottom: 80px;
 }
 // ! Search tabs
 .search-container {
@@ -9,9 +10,11 @@
 .search-tabs {
   width: 100%;
   background-color: $grey0;
-  padding: 24px;
-  padding-bottom: 32px;
-  border-radius: 8px;
+  padding: 32px;
+  padding-top: 24px;
+
+  padding-bottom: 40px;
+  border-radius: $borderRadiusBlock;
 
   &__helper {
     @include resetMarginPadding;
@@ -21,15 +24,15 @@
   &__list {
     @include resetMarginPadding;
     display: flex;
-    justify-content: center;
     list-style-type: none;
     align-items: center;
-    margin-left: 24px;
-    margin-bottom: 16px;
+    margin-left: 16px;
+    margin-bottom: 8px;
   }
 
   &__item {
     margin-right: 4px;
+    position: relative;
   }
 
   &__link {
@@ -39,13 +42,22 @@
     padding-left: 12px;
     padding-top: 8px;
     padding-bottom: 8px;
-    border-radius: 4px;
+    border-radius: $borderRadiusElement;
     color: $grey100;
-
     &--active {
+      font-weight: bold;
+    }
+
+    &--active:after {
+      content: "";
+      position: absolute;
+      display: block;
+      bottom: -8px;
+      left: 0px;
+      width: 100%;
+
+      height: 4px;
       background-color: $orangeB;
-      color: $grey100;
-      color: white;
     }
   }
 
@@ -58,10 +70,12 @@
       width: 100%;
       border: none;
       background-color: white;
-      border-radius: 4px;
+      border-radius: $borderRadiusElement;
+      padding-left: 16px;
       height: 56px;
       font-size: 16px;
       line-height: 48px;
+      border: 1px solid $grey25;
       font-family: Arial, Helvetica, sans-serif;
     }
 
