--- a/source/sass/_global.scss
+++ b/source/sass/_global.scss
@@ -31,8 +31,7 @@ a {
   color: white;
   font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
-  letter-spacing: 1px;
-  border-radius: 4px;
+  border-radius: $borderRadiusElement;
 }
 
 // ! Back-forward btn slider
@@ -63,10 +62,28 @@ a {
 
   &:hover {
     background-color: rgba($grey100, $controlOpacityBg);
+    border-bottom-right-radius: 8px;
+    border-top-right-radius: 8px;
   }
 
   &:hover::after {
     background-color: rgba($grey100, $controlOpacityControlOnBg);
+  }
+}
+// ! mod for slider in the middle of the page
+.back-forward-btn--slider-goods {
+  &:after {
+    content: "";
+    background-color: $grey0;
+    background-image: url("/img/global/arrow-right--orange.svg");
+  }
+
+  &:hover {
+    border-radius: $borderRadiusBlock;
+  }
+
+  &:hover::after {
+    background-color: rgba($grey50, $controlOpacityControlOnBg);
   }
 }
 
