--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,3 +6,4 @@
 @import "source/sass/blocks/index/hero-slider.scss";
 @import "source/sass/blocks/index/search-form.scss";
 @import "source/sass/blocks/index/department-links.scss";
+@import "source/sass/blocks/index/popular-goods.scss";
