--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,3 +7,5 @@
 @import "source/sass/blocks/index/search-form.scss";
 @import "source/sass/blocks/index/department-links.scss";
 @import "source/sass/blocks/index/popular-goods.scss";
+@import "source/sass/blocks/index/promo-goods.scss";
+@import "source/sass/blocks/index/complementary-goods.scss";
