--- a/source/sass/blocks/index/complementary-goods.scss
+++ b/source/sass/blocks/index/complementary-goods.scss
@@ -1,17 +1,21 @@
-.popular-container {
+.complementary-container {
   margin-top: 80px;
   margin-bottom: 80px;
 }
 
-.popular-goods-container {
+.complementary-goods-container {
   @include flex1170;
   justify-content: space-between;
   position: relative;
 }
 
-.popular-goods {
+.complementary-goods {
   @include resetMarginPadding;
   width: 100%;
+
+  &--title-without-link-right {
+    width: 500px;
+  }
 }
 
 .card-container {
