--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,3 +9,4 @@
 @import "source/sass/blocks/index/popular-goods.scss";
 @import "source/sass/blocks/index/promo-goods.scss";
 @import "source/sass/blocks/index/complementary-goods.scss";
+@import "source/sass/blocks/all/footer.scss";
