--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,3 +10,9 @@
 @import "source/sass/blocks/index/promo-goods.scss";
 @import "source/sass/blocks/index/complementary-goods.scss";
 @import "source/sass/blocks/all/footer.scss";
+
+.svg-_magnifying-glass-dims {
+  width: 42px;
+  height: 42px;
+  fill: red;
+}
