--- a/source/sass/blocks/index/department-links.scss
+++ b/source/sass/blocks/index/department-links.scss
@@ -65,7 +65,7 @@
     display: block;
     width: 100px;
     height: 100px;
-    background-image: url("/img/draft-depart.svg");
+    background-image: url("/img/index/department/chemistry.svg");
     background-repeat: no-repeat;
   }
 
@@ -77,7 +77,7 @@
     display: block;
     width: 100px;
     height: 100px;
-    background-image: url("/img/draft-depart.svg");
+    background-image: url("/img/index/department/wheels.svg");
     background-repeat: no-repeat;
   }
 
@@ -89,7 +89,7 @@
     display: block;
     width: 100px;
     height: 100px;
-    background-image: url("/img/draft-depart.svg");
+    background-image: url("/img/index/department/tools.svg");
     background-repeat: no-repeat;
   }
 
@@ -101,7 +101,7 @@
     display: block;
     width: 100px;
     height: 100px;
-    background-image: url("/img/draft-depart.svg");
+    background-image: url("/img/index/department/spare.svg");
     background-repeat: no-repeat;
   }
 
@@ -113,7 +113,7 @@
     display: block;
     width: 100px;
     height: 100px;
-    background-image: url("/img/draft-depart.svg");
+    background-image: url("/img/index/department/electricity.svg");
     background-repeat: no-repeat;
   }
 
@@ -125,7 +125,7 @@
     display: block;
     width: 100px;
     height: 100px;
-    background-image: url("/img/draft-depart.svg");
+    background-image: url("/img/index/department/others.svg");
     background-repeat: no-repeat;
   }
 }
