--- a/source/sass/blocks/index/hero-slider.scss
+++ b/source/sass/blocks/index/hero-slider.scss
@@ -244,7 +244,7 @@
 
     &::before {
       content: "";
-      background-image: url("/img/index/icon_countdown.svg");
+      background-image: url("../img/index/icon_countdown.svg");
       background-repeat: no-repeat;
       background-size: 100%;
       position: absolute;
