--- a/source/sass/blocks/index/search-form.scss
+++ b/source/sass/blocks/index/search-form.scss
@@ -12,6 +12,7 @@
   background-color: $grey0;
   padding: 32px;
   padding-top: 24px;
+  box-sizing: border-box;
 
   padding-bottom: 40px;
   border-radius: $borderRadiusBlock;
@@ -60,31 +61,93 @@
       background-color: $orangeB;
     }
   }
+}
+// ! search-field
+.search-form {
+  position: relative;
+  display: flex;
 
-  // ! search-field
-  .search-form {
-    position: relative;
-    display: flex;
+  &__input {
+    width: 100%;
+    border: none;
+    background-color: white;
+    border-radius: $borderRadiusElement;
+    padding-left: 16px;
+    height: 56px;
+    font-size: 16px;
+    line-height: 48px;
+    border: 1px solid $grey25;
+    font-family: Arial, Helvetica, sans-serif;
+  }
 
-    &__input {
-      width: 100%;
-      border: none;
-      background-color: white;
-      border-radius: $borderRadiusElement;
-      padding-left: 16px;
+  &__button {
+    position: absolute;
+    top: 7px;
+    right: 7px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
+}
+
+.search-form__icon-mobile {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .search-container {
+    width: 100%;
+    box-sizing: border-box;
+  }
+
+  .search-tabs {
+    padding: 0px;
+    padding-top: 8px;
+    padding-bottom: 32px;
+
+    border-radius: 0px;
+
+    &__list {
       height: 56px;
-      font-size: 16px;
-      line-height: 48px;
-      border: 1px solid $grey25;
-      font-family: Arial, Helvetica, sans-serif;
+      margin-bottom: 0px;
+      overflow: auto;
+      white-space: nowrap;
+      padding-left: 16px;
+    }
+
+    &__item {
+      margin-right: 0px;
+    }
+
+    &__link {
+      &--active:after {
+        bottom: -8px;
+      }
+    }
+  }
+
+  .search-form {
+    &__input {
+      margin-right: 16px;
+      margin-left: 16px;
     }
 
     &__button {
-      position: absolute;
-      top: 7px;
-      right: 7px;
-      padding-top: 12px;
-      padding-bottom: 12px;
+      top: 8px;
+      right: 24px;
+      padding-top: 8px;
+      padding-bottom: 8px;
+
+      padding-left: 12px;
+      padding-right: 12px;
     }
+
+    &__button-text {
+      display: none;
+    }
+  }
+
+  .search-form__icon-mobile {
+    fill: white;
+    display: block;
   }
 }
