--- a/source/sass/blocks/index/search-form.scss
+++ b/source/sass/blocks/index/search-form.scss
@@ -141,6 +141,10 @@
       padding-right: 12px;
     }
 
+    &__input {
+      padding-right: 80px;
+    }
+
     &__button-text {
       display: none;
     }
