Добавлен футер и внесены мелкие улучшения

--- a/source/sass/_variable.scss
+++ b/source/sass/_variable.scss
@@ -32,6 +32,9 @@ $borderRadiusBlock: 8px;
 $borderRadiusElement: 4px;
 $gradientBrand: linear-gradient(91.1deg, #9710e9 1.17%, #fd8d43 99.31%);
 
+$marginSectionMob: 56px;
+$marginSectionDesk: 80px;
+
 $controlOpacityFullOVerlay: 0.64;
 $controlOpacityBg: 0.16;
 $controlOpacityControlOnBg: 0.4;
