--- a/source/sass/_global.scss
+++ b/source/sass/_global.scss
@@ -44,6 +44,8 @@ a {
 
 // ! sprite icon default
 .icon-sprite {
+  width: 32px;
+  height: 32px;
   fill: $grey50;
 }
 
@@ -144,9 +146,7 @@ a {
       display: block;
       left: 0px;
       bottom: -13px;
-
       width: 100%;
-
       height: 4px;
       background-color: $orangeB;
     }
@@ -182,12 +182,17 @@ a {
     justify-content: flex-start;
     white-space: nowrap;
 
-    // justify-content: center;
-
     &__item {
       @include resetMarginPadding;
       padding-right: 8px;
       padding-left: 8px;
+      &:nth-child(2) {
+        margin-left: auto;
+      }
+
+      &:nth-last-child(2) {
+        padding-right: 16px;
+      }
 
       &:last-child {
         display: none;
@@ -202,8 +207,9 @@ a {
 
     &__title {
       width: 100%;
-      font-size: 18px;
-      font-weight: bold;
+      font-size: 16px;
+      font-weight: normal;
+      margin-right: 12px;
     }
   }
 }
