--- a/source/sass/blocks/index/department-links.scss
+++ b/source/sass/blocks/index/department-links.scss
@@ -132,19 +132,29 @@
       box-sizing: border-box;
       margin-left: 16px;
       margin-right: 16px;
+      border: 1px solid $grey25;
+      border-radius: $borderRadiusBlock;
     }
 
     &__item {
       @include resetMarginPadding;
       width: 100%;
-      margin-bottom: 12px;
+      margin-bottom: 0px;
+      border-bottom: 1px solid $grey25;
       &:nth-last-child(-n + 3) {
-        margin-bottom: 12px;
+        margin-bottom: 0px;
+      }
+
+      &:nth-last-child(-n + 1) {
+        border-bottom: none;
       }
     }
 
     &__link {
       padding: 16px;
+      border: none;
+      border-bottom: none;
+      border-radius: 0px;
     }
 
     &__name {
@@ -167,7 +177,7 @@
       bottom: 0;
       margin-top: auto;
       margin-bottom: auto;
-      background-size: 80%;
+      background-size: 72%;
       background-position: center right 0px;
       background-repeat: no-repeat;
     }
