--- a/source/sass/blocks/index/search-form.scss
+++ b/source/sass/blocks/index/search-form.scss
@@ -1,6 +1,6 @@
 .main-search-container {
-  margin-top: 80px;
-  margin-bottom: 80px;
+  margin-top: $marginSectionDesk;
+  margin-bottom: $marginSectionDesk;
 }
 // ! Search tabs
 .search-container {
@@ -94,6 +94,11 @@
 }
 
 @media (max-width: 768px) {
+  .main-search-container {
+    margin-top: $marginSectionMob;
+    margin-bottom: $marginSectionMob;
+  }
+
   .search-container {
     width: 100%;
     box-sizing: border-box;
@@ -132,13 +137,15 @@
     }
 
     &__button {
-      top: 8px;
+      @include resetMarginPadding;
+      top: 50%;
+      transform: translateY(-50%);
       right: 24px;
-      padding-top: 8px;
-      padding-bottom: 8px;
-
-      padding-left: 12px;
-      padding-right: 12px;
+      width: 48px;
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     &__input {
@@ -151,6 +158,8 @@
   }
 
   .search-form__icon-mobile {
+    width: 24px;
+    height: 24px;
     fill: white;
     display: block;
   }
