--- a/source/sass/blocks/index/top-menu.scss
+++ b/source/sass/blocks/index/top-menu.scss
@@ -148,14 +148,16 @@
   }
 
   .bobs-burger-menu {
-    padding-left: 16px;
     box-sizing: border-box;
-    display: block;
+    display: flex;
+    align-items: center;
     background: none;
     border: none;
     width: 40px;
     height: 40px;
     align-self: center;
+    margin-right: 8px;
+    margin-left: 8px;
   }
 
   .fav-menu {
@@ -177,12 +179,12 @@
   }
 
   .service-menu {
-    margin-right: 16px;
+    margin-right: 0px;
     width: auto;
     margin-left: auto;
 
     &__item {
-      margin-left: 8px;
+      margin-left: 4px;
     }
   }
 
