--- a/source/sass/_global.scss
+++ b/source/sass/_global.scss
@@ -8,6 +8,7 @@
 // turn off ios style
 input[type="search"],
 input[type="text"],
+input[type="email"],
 input[type="submit"],
 textarea {
   -webkit-appearance: none;
@@ -115,13 +116,14 @@ a {
 
   &__item {
     padding-left: 8px;
-    padding-right: 16px;
+    padding-right: 8px;
 
     &:nth-child(1) {
       padding-left: 16px;
     }
 
     &:last-child {
+      margin-left: auto;
       padding-right: 16px;
       text-align: right;
     }
@@ -140,6 +142,7 @@ a {
 
   &__link--active {
     font-weight: bold;
+    color: $orangeB;
     &::after {
       content: "";
       position: absolute;
@@ -155,7 +158,7 @@ a {
   &__title {
     @include resetMarginPadding;
     margin-bottom: 0px;
-    width: 320px;
+    width: 340px;
   }
 }
 
@@ -186,6 +189,7 @@ a {
       @include resetMarginPadding;
       padding-right: 8px;
       padding-left: 8px;
+      margin-right: 2px;
       &:nth-child(2) {
         margin-left: auto;
       }
@@ -208,7 +212,7 @@ a {
     &__title {
       width: 100%;
       font-size: 16px;
-      font-weight: normal;
+      font-weight: bold;
       margin-right: 12px;
     }
   }
