--- a/source/sass/blocks/index/hero-slider.scss
+++ b/source/sass/blocks/index/hero-slider.scss
@@ -63,7 +63,7 @@
   padding: 0px 0px 0px 0px;
   display: flex;
 
-  height: 24px;
+  height: 20px;
   background-color: rgba($grey100, $controlOpacityBg);
   border-radius: 100px;
   position: absolute;
@@ -83,8 +83,8 @@
     &::before {
       content: "";
       display: block;
-      width: 8px;
-      height: 8px;
+      width: 4px;
+      height: 4px;
       border: 1px solid white;
       margin: 7px 0 8px;
       border-radius: 100px;
@@ -207,8 +207,9 @@
 
   &__title {
     @include resetMarginPadding;
+    display: inline-block;
+    line-height: 20px;
     text-align: center;
-    line-height: 18px;
     font-weight: normal;
     font-size: 14px;
   }
@@ -223,7 +224,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  position: relative;
   border-radius: $borderRadiusBlock;
 
   &__count-down-title {
@@ -239,6 +239,7 @@
     @include resetMarginPadding;
     border-collapse: collapse;
     margin-bottom: 14px;
+    position: relative;
 
     &::before {
       content: "";
@@ -246,7 +247,7 @@
       background-repeat: no-repeat;
       background-size: 100%;
       position: absolute;
-      bottom: 12px;
+      bottom: 0px;
       display: block;
       width: 40px;
       height: 40px;
@@ -255,21 +256,22 @@
 
   &__countdown-tr {
     @include resetMarginPadding;
+    position: relative;
   }
 
   &__mins-digits::before {
     content: ":";
     position: absolute;
-    bottom: 27px;
-    left: 126px;
+    bottom: 12px;
+    left: 83px;
     color: $grey75;
   }
 
   &__mins-digits::after {
     content: ":";
     position: absolute;
-    bottom: 27px;
-    left: 176px;
+    bottom: 12px;
+    left: 135px;
     color: $grey75;
   }
 
@@ -302,8 +304,167 @@
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 320px) {
+  .offer-demonstration {
+    flex-wrap: wrap;
+
+    &__img {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      margin-right: 0px;
+      position: relative;
+    }
+
+    &__container {
+      text-align: center;
+      width: 100%;
+    }
+
+    &__title {
+      padding-left: 16px;
+      padding-right: 16px;
+      box-sizing: border-box;
+
+      font-size: 14px;
+      text-align: center;
+    }
+  }
+
+  .offer-comprasion {
+    position: absolute;
+    left: 73%;
+    top: 0px;
+  }
+}
+
+@media (max-width: 768px) {
   .promo-container {
+    width: 100%;
+    flex-wrap: wrap;
+  }
+
+  .slider {
+    width: 100%;
+    height: 300px;
+    background-color: $grey25;
+
+    &__img {
+      display: none;
+    }
+  }
+
+  // super offer
+  .super-offer {
+    @include resetMarginPadding;
+    margin-top: 64px;
+    width: 100%;
+    margin-right: 16px;
+    margin-left: 16px;
+    border: 1px solid $grey25;
+    border-radius: $borderRadiusBlock;
+    display: relative;
+  }
+
+  .offer-comprasion {
+    top: 0px;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
+    text-align: left;
+    position: relative;
+    margin-top: 16px;
+
+    &__new-price {
+      font-size: 24px;
+    }
+
+    &__old-price {
+      margin-top: 0px;
+
+      &::after {
+        top: 38px;
+        left: -5px;
+        width: 50px;
+      }
+    }
+  }
+
+  .supper-offer-link {
+    @include textLinkReset;
+
+    &::before {
+      content: "Акция";
+      transform: rotate(-90deg);
+      position: absolute;
+      font-size: 12px;
+      font-weight: bold;
+      color: white;
+      text-transform: uppercase;
+      top: 23px;
+      left: -25px;
+      letter-spacing: 2px;
+      display: block;
+      width: auto;
+      padding-top: 2px;
+      padding-bottom: 2px;
+      padding-left: 12px;
+      padding-right: 12px;
+      height: 24px;
+      background: $gradientBrand;
+      border-top-right-radius: 8px;
+      border-bottom-left-radius: 8px;
+    }
+  }
+
+  .offer-demonstration {
+    @include resetMarginPadding;
+
+    display: flex;
+    height: 100%;
+    flex-wrap: nowrap;
+    height: auto;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 16px;
+    box-sizing: border-box;
+
+    &__img {
+      @include resetMarginPadding;
+      margin-right: 16px;
+      width: 50%;
+    }
+
+    &__title {
+      @include resetMarginPadding;
+      display: inline-block;
+      width: 100%;
+      padding-top: 0px;
+      text-align: left;
+      font-size: 18px;
+      line-height: 22px;
+    }
+
+    &__container {
+      margin-top: 16px;
+      width: 50%;
+    }
+  }
+
+  .offer-action {
+    width: 100%;
+    padding: 0px;
+
+    &__count-down-title {
+      font-weight: normal;
+    }
+  }
+
+  .slider__button {
     display: none;
+  }
+
+  .icon-menu-small {
+    width: 32px;
   }
 }
