--- a/source/sass/blocks/index/search-form.scss
+++ b/source/sass/blocks/index/search-form.scss
@@ -19,7 +19,8 @@
 
   &__helper {
     @include resetMarginPadding;
-    padding-right: 16px;
+    font-weight: normal;
+    padding-right: 8px;
   }
 
   &__list {
@@ -33,18 +34,18 @@
 
   &__item {
     margin-right: 4px;
-    position: relative;
+    padding-right: 12px;
   }
 
   &__link {
     @include textLinkReset;
     display: block;
-    padding-right: 12px;
-    padding-left: 12px;
+
     padding-top: 8px;
     padding-bottom: 8px;
     border-radius: $borderRadiusElement;
     color: $grey100;
+    position: relative;
     &--active {
       font-weight: bold;
     }
@@ -120,10 +121,16 @@
     }
 
     &__item {
-      margin-right: 0px;
+      margin-right: 6px;
+      &:first-child {
+        margin-right: 0px;
+      }
     }
 
     &__link {
+      &--active {
+        color: $orangeB;
+      }
       &--active:after {
         bottom: -8px;
       }
