--- a/source/sass/blocks/index/top-menu.scss
+++ b/source/sass/blocks/index/top-menu.scss
@@ -105,8 +105,8 @@
   border-bottom: 1px solid $grey25;
 
   &__item {
-    padding-right: 12px;
-    padding-left: 12px;
+    margin-right: 12px;
+    margin-left: 12px;
     position: relative;
   }
 
@@ -117,6 +117,7 @@
   }
 
   &__item--active {
+    color: $orangeB;
     &::after {
       content: "";
       position: absolute;
@@ -153,8 +154,6 @@
     align-items: center;
     background: none;
     border: none;
-    width: 40px;
-    height: 40px;
     align-self: center;
     margin-right: 8px;
     margin-left: 8px;
