Добавлен бургер + иконки

--- a/source/sass/_global.scss
+++ b/source/sass/_global.scss
@@ -337,6 +337,10 @@ a {
     align-items: center;
   }
 }
+.card-icon-btn {
+  height: 28px;
+  fill: #fff;
+}
 
 @media (max-width: 768px) {
   .card {
