--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,3 +12,5 @@
 @import "source/sass/blocks/index/promo-goods.scss";
 @import "source/sass/blocks/index/also-buy.scss";
 @import "source/sass/blocks/all/footer.scss";
+
+@import "source/sass/blocks/all/burger-menu.scss";
